--- a/client/default/index.html
+++ b/client/default/index.html
@@ -15,7 +15,9 @@
             <div data-role="header">
                 <h1>Header</h1>
             </div>
-            <div data-role="content"></div>
+            <div data-role="content">
+                <ol data-role="listview" data-inset="true"></ol>
+            </div>
             <div data-role="footer">
                 <h1>Footer</h1>
             </div>
