changes to add map page and show page

--- a/client/app.html
+++ b/client/app.html
@@ -42,7 +42,9 @@
                         type="password">
                     </fieldset>
                 </div>
-                <input id="login" type="submit" data-theme="b" value="Login">
+                <a data-role="button" data-transition="slide" data-theme="b" href="#page3">
+                    Login
+                </a>
             </div>
         </div>
         <!-- list -->
