--- a/client/app.html
+++ b/client/app.html
@@ -18,6 +18,8 @@
         </script>
         <script src="my.js">
         </script>
+        <script src="custom.js">
+        </script>
     </head>
     
     <body>
