removed.idea files and updated app.html

--- a/client/app.html
+++ b/client/app.html
@@ -116,7 +116,7 @@
                     </li>
                 </ul>
             </div>
-            <div data-role="tabbar" data-iconpos="top" data-theme="b">
+            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
@@ -186,7 +186,7 @@
                     </p>
                 </div>
             </div>
-            <div data-role="tabbar" data-iconpos="top" data-theme="b">
+            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
@@ -220,7 +220,7 @@
                 <img src="https://maps.googleapis.com/maps/api/staticmap?center=kensal green london uk&amp;zoom=14&amp;size=320x465&amp;markers=&amp;sensor=false"
                 width="320" height="465">
             </div>
-            <div data-role="tabbar" data-iconpos="top" data-theme="b">
+            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
