--- a/client/app.html
+++ b/client/app.html
@@ -58,7 +58,7 @@
                 </h3>
             </div>
             <div data-role="content">
-                <ul id="list" data-role="listview" data-divider-theme="b" data-inset="false">
+                <ul data-role="listview" data-divider-theme="b" data-inset="false">
                     <li data-theme="c">
                         <a href="#page4" data-transition="slide">
                             265602 LNW South
@@ -109,14 +109,9 @@
                             324234 LNW South
                         </a>
                     </li>
-                    <li data-theme="c">
-                        <a href="#page4" data-transition="slide">
-                            253825 LNW South
-                        </a>
-                    </li>
                 </ul>
             </div>
-            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
+            <div data-role="tabbar" data-iconpos="top" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
@@ -129,7 +124,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" data-theme="" data-icon="info">
+                        <a href="#" data-theme="" data-icon="gear">
                             Reality
                         </a>
                     </li>
@@ -139,54 +134,17 @@
         <!-- show -->
         <div data-role="page" id="page4">
             <div data-theme="b" data-role="header">
-                <a data-role="button" data-transition="pop" href="#page1" class="ui-btn-right">
-                    Logout
-                </a>
                 <h3>
                     Detail
                 </h3>
-                <a data-role="button" data-direction="reverse" data-rel="back" data-transition="slide"
-                data-theme="b" href="#page3" class="ui-btn-left">
+                <a data-role="button" data-transition="slide" data-theme="b" href="#page3"
+                class="ui-btn-left">
                     back
                 </a>
             </div>
             <div data-role="content">
-                <div>
-                    <p>
-                        <b>
-                            Suspect ID: 227690
-                        </b>
-                    </p>
-                    <p>
-                        <b>
-                        </b>
-                        <b>
-                            Route: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; LNW South
-                        </b>
-                    </p>
-                    <p>
-                        <b>
-                            Ran Date: &nbsp; &nbsp; &nbsp;3 Aug 2009
-                        </b>
-                    </p>
-                    <p>
-                        <b>
-                            Due Date: &nbsp; &nbsp; &nbsp;11 Aug 2009
-                        </b>
-                    </p>
-                    <p>
-                        <b>
-                            Category: &nbsp; &nbsp; &nbsp; New Suspect
-                        </b>
-                    </p>
-                    <p>
-                        <b>
-                            Priority: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; P2
-                        </b>
-                    </p>
-                </div>
             </div>
-            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
+            <div data-role="tabbar" data-iconpos="top" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
@@ -199,7 +157,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" data-theme="" data-icon="info">
+                        <a href="#" data-theme="" data-icon="gear">
                             Reality
                         </a>
                     </li>
@@ -216,11 +174,11 @@
                     Map
                 </h3>
             </div>
-            <div data-role="content" style="padding: 0px">
-                <img src="https://maps.googleapis.com/maps/api/staticmap?center=kensal green london uk&amp;zoom=14&amp;size=320x465&amp;markers=&amp;sensor=false"
-                width="320" height="465">
+            <div data-role="content">
+                <img src="https://maps.googleapis.com/maps/api/staticmap?center=kensal green london uk&amp;zoom=14&amp;size=290x400&amp;markers=&amp;sensor=false"
+                width="290" height="400">
             </div>
-            <div data-role="tabbar" data-iconpos="bottom" data-theme="b">
+            <div data-role="tabbar" data-iconpos="top" data-theme="b">
                 <ul>
                     <li>
                         <a href="#page3" data-theme="" data-icon="home">
@@ -233,7 +191,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" data-theme="" data-icon="info">
+                        <a href="#" data-theme="" data-icon="gear">
                             Reality
                         </a>
                     </li>
